syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixKeyManager";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service PixKeyManagerService {
  rpc register (PixKeyManagerRequest) returns (PixKeyManagerResponse) {}
}

service PixKeyManagerRemoveService {
  rpc remove (RemoveKeyRequest) returns (RemoveKeyResponse){}
}

enum KeyTypeRequest {
  CPF = 0;
  CELL_NUMBER = 1;
  EMAIL = 2;
  RANDOM_KEY = 3;
}

enum AccountTypeRequest {
    CONTA_CORRENTE = 0;
    CONTA_POUPANCA  =1;
}

message PixKeyManagerRequest {
  string id = 1;
  KeyTypeRequest keyTipeRequest = 2;
  string valueKey = 3;
  AccountTypeRequest accountTypeRequest = 4;

}

message PixKeyManagerResponse {
  int64 id = 1;
}

message ErrorDetails{
  int32 code = 1;
  string message =2;
}

message RemoveKeyRequest{
  string clienteId = 1;
  string pixKeyId = 2;
}
message RemoveKeyResponse{
  string clienteId = 1;
  string pixKeyId = 2;
}